@@ -20,9 +20,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.apache.openejb</groupId>
+            <groupId>org.apache.tomee</groupId>
             <artifactId>javaee-api</artifactId>
-            <version>7.0-SNAPSHOT</version>
+            <version>[8.0,)</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -38,5 +38,32 @@
         </dependency>
     </dependencies>
 
+    <build>
+<!--        <finalName>async-servlet</finalName>-->
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.1.0</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.tomee.maven</groupId>
+                <artifactId>tomee-maven-plugin</artifactId>
+                <version>8.0.1</version>
+                <configuration>
+                    <args>-Xmx512m -XX:PermSize=256m</args>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
